crates/toml_edit/tests/snapshots/invalid/bool/mixed-case.stderr
TOML parse error at line 1, column 35
  |
1 | mixed-case              = valid   = False
  |                                   ^
unexpected key or value, expected newline, `#`
